--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,4 +1,4 @@
 <!--index.wxml-->
 <view class="container">
-  <button bindtap="scan" type="primary">扫一扫</button>
+  <button bindtap="scan" type="primary">识别</button>
 </view>
